fix(widget-chat): Fix file chip alignment styles in IE

--- a/packages/widget-chat/src/components/chip-file/styles.css
+++ b/packages/widget-chat/src/components/chip-file/styles.css
@@ -9,8 +9,11 @@
 }
 
 .info {
+  display: flex;
   padding: 0 10px;
   margin: auto 0;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .name {
